[package]
name = "corona"
version = "0.19.0"
authors = ["Dirk Stolle <striezel-dev@web.de>"]
description = "command-line application to generate graphs showing the Coronavirus (SARS-CoV-2, COVID-19) case numbers for various countries"
readme = "readme.md"
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/striezel/corona"
license = "GPL-3.0-or-later"
keywords = ["Corona", "Coronavirus", "COVID-19", "disease", "plot"]
categories = ["command-line-utilities", "visualization"]

[profile.release]
# optimize for size
opt-level = "s"
debug = false
debug-assertions = false
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pinned to 1.3.0, because 1.3.1 would required rustc 1.65+, but MSRV is 1.63.0.
csv = "=1.3.0"
# Pin regex to 1.9.6, because later versions need rustc 1.65.
regex = "=1.9.6"
rusqlite = "0.31.0"
sha2 = "0.10"

# The dependencies below are not really direct dependencies. They are just a
# way of pinning certain crates to certain versions to ensure we stay true to
# this project's MSRV. I know there is Cargo.lock to lock versions down, but
# pinning them here also guarantees that a `cargo update` will not update them
# to a newer version. Cargo.lock does not do that.

# Pin once_cell to 1.20.3, because later versions need rustc 1.70+.
[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
once_cell = { version = "=1.20.3", default-features = false, features = ["alloc"] }
