[package]
name = "corona"
version = "0.20.1"
authors = ["Dirk Stolle <striezel-dev@web.de>"]
description = "command-line application to generate graphs showing the Coronavirus (SARS-CoV-2, COVID-19) case numbers for various countries"
readme = "readme.md"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/striezel/corona"
license = "GPL-3.0-or-later"
keywords = ["Corona", "Coronavirus", "COVID-19", "disease", "plot"]
categories = ["command-line-utilities", "visualization"]

[profile.release]
# optimize for size
opt-level = "s"
debug = false
debug-assertions = false
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "now"] }
csv = "1.3.1"
regex = "1.11.2"
rusqlite = "0.31.0"
sha2 = "0.10"
